--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 28/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 38 points<br>
+Unlocked 29/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 39 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -32,6 +32,7 @@ Unlocked 28/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
+<li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 14 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Apprentice Seamstress (Level 1)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -53,29 +54,29 @@ Unlocked 28/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    936 rev-parse
-    914 symbolic-ref
-    912 ls-files
-     48 status
-     26 checkout
+   1016 rev-parse
+    993 symbolic-ref
+    991 ls-files
+     49 status
+     31 checkout
+     19 log
      16 pull
-     16 log
+     15 branch
      14 achievements
+     12 tag
+     12 add
      11 commit
-     10 branch
-      9 add
-      8 help
-      7 tag
+      9 help
       7 config
-      4 push
+      6 push
       4 merge
       4 diff
       3 show
       3 reset
+      3 init
       2 whatchanged
       2 submodule
       2 rebase
-      2 init
       2 gc
       2 format-patch
       2 blame
@@ -105,7 +106,6 @@ There are 51 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Inventor ($1)</div><div class="info">Used a command that isn't part of the built in Git command</div></li>
 <li><div class="title">Merchant</div><div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Messenger</div><div class="info">Applied a patch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-am.html">git-am</a>.</div></li>
-<li><div class="title">Miller</div><div class="info">Add only part of a file to the stage X times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Pedantic</div><div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Pilgrim</div><div class="info">Performed a rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> --onto.</div></li>
 <li><div class="title">Plumber</div><div class="info">Use the internal plumbing commands of git.</div></li>
